# study

doc/: memo_apt-get.md  memo_docker.md  memo_git.md  memo_python_env.md  memo_samba.md
env/debug_training/: Dockerfile
env/yocto3.6/: Dockerfile
src/debug_training/case1_printf/step1/: hello.c  makefile
src/debug_training/case1_printf/step2/: hello.c  hi.c  makefile
src/debug_training/case1_printf/step3/: hello.c  makefile
src/debug_training/case1_printf/step3_debug/: hello  hello.c  hello.h
src/debug_training/case2_mem_leak/: makefile  malloc_loop.c  monitor.sh
src/debug_training/case3_fd_leak/: makefile  monitor.sh  open_loop.c
src/debug_training/case4_errno_limits/: makefile  open_limit.c
src/debug_training/case5_gdb/: hello.c  hello.h  makefile
src/grp_comp_bat/: makezip.bat  makezip_all.bat
src/salvator-x_led/: CMakeLists.txt  setting.sh
src/salvator-x_led/led_toggle/: CMakeLists.txt
src/salvator-x_led/led_toggle/inc/: led.h
src/salvator-x_led/led_toggle/src/: led.c
